[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmutils"
version = "0.7.7"
authors = [{name="yuki", email="yuki@nowhere.place" }]
description = "Package management utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests",
                "click",
                "aiohttp",
                "pyalpm",
                "tqdm",
                "zstandard"]

[tool.setuptools.packages.find]
exclude = ["vmhelper"]

[project.scripts]
pm = "pmutils.pm:main"

[project.urls]
"Homepage" = "https://github.com/macos-pacman/pmutils"
